docs(api): add docs for DELETE /permissions;
