# docs/openapi.json
@@ -122,6 +122,55 @@
             ]
           }
         ]
+      },
+      "delete": {
+        "tags": [
+          "permissions"
+        ],
+        "summary": "Revoke a list of permissions from a user",
+        "description": "Revoke a list of permissions from a user\n\nRequires: `PermissionDelete` & all permissions of the user who's permissions are being revoked",
+        "operationId": "permission_delete",
+        "parameters": [
+          {
+            "name": "username",
+            "in": "path",
+            "description": "The username of the user who's permissions you would like to revoke",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "description": "A list of permissions to Revoke",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Json"
+              },
+              "example": [
+                "DocsRead",
+                "PermissionDelete"
+              ]
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Success"
+          },
+          "403": {
+            "description": "Forbidden you do not have the required permissions"
+          }
+        },
+        "security": [
+          {
+            "permissions": [
+              "PermissionDelete"
+            ]
+          }
+        ]
       }
     },
     "/token": {
@@ -129,8 +178,8 @@
         "tags": [
           "tokens"
         ],
-        "summary": "Creates a login token",
-        "description": "Creates a login token",
+        "summary": "Creates a login token which can be used to access other endpoints",
+        "description": "Creates a login token which can be used to access other endpoints",
         "operationId": "token_write",
         "requestBody": {
           "description": "Your username & password",
@@ -173,7 +222,7 @@
           {
             "name": "username",
             "in": "path",
-            "description": "The username of the user whos tokens you would like to delete",
+            "description": "The username of the user who's tokens you would like to delete",
             "required": true,
             "schema": {
               "type": "string"
